--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -22,7 +22,7 @@
 @breakpoint-md: 					840px; // Greater than or equal
 @breakpoint-lg: 					1080px; // Greater than or equal
 
-// Breakpoints - pixel values 
+// Breakpoints - pixel values
 @screen-xs-max: 					unit((@breakpoint-sm - 1), px);
 @screen-sm-min: 					unit(@breakpoint-sm, px);
 @screen-sm-max: 					unit((@breakpoint-md - 1), px);
@@ -184,3 +184,93 @@
 @form-disabled-bg:					@gray-8;
 @form-disabled-text:				@gray-4;
 
+/***************************************************************************
+ * ICONS
+ */
+
+/*
+@i-external-link:       "\f08e";
+@i-action:              "\f016";
+@i-doc-word:            "\f1c2";
+@i-doc-excel:           "\f1c3";
+@i-doc-pdf:             "\f1c1";
+@i-doc-code:            "\f1c9";
+@i-tick:                "\2713";
+@i-up:                  "\2c4";
+@i-down:                "\2c5";
+@i-left:                "\3c";
+@i-right:               "\3e";
+@i-cross:               "\2716";
+@i-exclamation:         "\f06a";
+@i-search:              "\e600";
+@i-plus:                "\f067";
+@i-minus:               "\f068";
+@i-email:				"\f003";
+@i-print:				"\2399";
+@i-restart:				"\f01e";
+@i-save:				"\e610";
+@i-retrieve:			"\e611";
+@i-copy:				"\e614";
+@i-clear:				"\238c";
+@i-help:				"\3f";
+@i-close:				"\2716";
+*/
+
+@i-key: 					"\e900";
+@i-undo: 					"\238c";
+@i-target: 					"\e605";
+@i-help: 					"\3f";
+@i-search: 					"\e600";
+@i-email: 					"\f003";
+@i-star: 					"\2605";
+@i-star-o: 					"\f006";
+@i-tick: 					"\2713";
+@i-cross: 					"\2716";
+@i-bin: 					"\e607";
+@i-doc: 					"\f016";
+@i-inbox: 					"\e618";
+@i-redo: 					"\f01e";
+@i-left: 					"\3c";
+@i-right: 					"\3e";
+@i-angle-double-left: 		"\f100";
+@i-angle-double-right: 		"\f101";
+@i-angle-left: 				"\f104";
+@i-angle-right: 			"\f105";
+@i-plus-circle: 			"\f055";
+@i-minus-circle: 			"\f056";
+@i-plus: 					"\f067";
+@i-minus: 					"\f068";
+@i-exclamation-circle: 		"\f06a";
+@i-exclamation-triangle: 	"\f071";
+@i-bubble: 					"\e606";
+@i-up: 						"\2c4";
+@i-down: 					"\2c5";
+@i-external-link:			"\f08e";
+@i-megaphone: 				"\261e";
+@i-menu: 					"\2630";
+@i-right-small:				"\25b6";
+@i-sort: 					"\2195";
+@i-sort-desc: 				"\2193";
+@i-sort-asc: 				"\f0de";
+@i-doc-pdf: 				"\f1c1";
+@i-doc-word: 				"\f1c2";
+@i-doc-excel: 				"\f1c3";
+@i-doc-powerpoint: 			"\f1c4";
+@i-doc-image: 				"\f1c5";
+@i-doc-zip: 				"\f1c6";
+@i-doc-audio: 				"\f1c7";
+@i-doc-video: 				"\f1c8";
+@i-doc-code: 				"\f1c9";
+@i-whatsapp: 				"\f232";
+@i-copy: 					"\e614";
+@i-clock: 					"\231a";
+@i-print: 					"\2399";
+@i-save: 					"\e610";
+@i-load: 					"\e611";
+@i-happy: 					"\263a";
+@i-exit: 					"\e60a";
+@i-new-window: 				"\e60f";
+@i-google: 					"\e60b";
+@i-facebook: 				"\e60c";
+@i-twitter: 				"\e60d";
+@i-zws: 					"_";
