--- a/libs/mixins/btn-icon.less
+++ b/libs/mixins/btn-icon.less
@@ -4,7 +4,7 @@
  * Mixin to add icons to buttons by picking the content, position, color and border.
  */
 
-.btn-icon(@icon: "\f054"; @position: right; @color: @white; @border: false) {
+.btn-icon(@icon: "\2713"; @position: right; @color: @white; @border: false) {
     position: relative;
     padding-@{position}: 2.5em;
     &:after {
