--- a/libs/modules/tablesort.less
+++ b/libs/modules/tablesort.less
@@ -24,7 +24,7 @@
 
 .tablesort-button:before {
     .icon;
-    content: @icon-symbol-sort;
+    content: @i-sort;
 }
 
 .tablesort-button span {
@@ -57,10 +57,10 @@ input.tablesort-filter {
 }
 
 .tablesort-asc .tablesort-button:before {
-    content: @icon-symbol-sort-asc;
+    content: @i-sort-asc;
 }
 .tablesort-desc .tablesort-button:before {
-    content: @icon-symbol-sort-desc;
+    content: @i-sort-desc;
 }
 
 @media print {
