--- a/libs/site.less
+++ b/libs/site.less
@@ -2,7 +2,7 @@
 @import "vendors/normalize";
 //@import "vendors/font-awesome/less/font-awesome";
 @import "vendors/brand-icon";
-@import "vendors/cab-icons";
+//@import "vendors/cab-icons";
 
 /* Override files */
 @import "styleguide/guide";
