--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -60,7 +60,7 @@
 	    position: relative;
 		&:after {
 			box-sizing: border-box;
-		    font-family: 'FontAwesome';
+		    font-family: 'cab-icons';
 		    content: "\f054";
 		    color: @callout-text;
 		    background-color: darken(spin(@callout-background, 15), 10%);
@@ -90,7 +90,7 @@
 		.callout--border;
 		.callout--border--left;
 	    &:before {
-	        font-family: 'FontAwesome';
+	        font-family: 'cab-icons';
 	        font-size: .85rem;
 	        font-weight: 300;
 	        content: @icon;
