--- a/libs/mixins/revealable.less
+++ b/libs/mixins/revealable.less
@@ -44,7 +44,7 @@
         }
         &:after {
             box-sizing: border-box;
-            font-family: 'FontAwesome';
+            font-family: 'cab-icons';
             content: "\f067";
             padding: 0 @box-spacing-horizontal*1.25;
             .vertical-align(absolute);
@@ -72,7 +72,7 @@
         text-align: right;
         &:before {
             box-sizing: border-box;
-            font-family: 'FontAwesome';
+            font-family: 'cab-icons';
             padding: 0 @box-spacing-horizontal*1.25;
             height: 100%;
             position: absolute;
