--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -13,17 +13,17 @@ span[id*="overlay_button"] {
     font-weight: @font-weight-bold;
     &:before {
         content: "\00a0\f059\00a0";
-        font-family: 'Helvetica', 'FontAwesome';
+        font-family: 'cab-icons';
     }
 }
 
 .callout--adviser,
 .dap-panel--adviser {
-    .callout( 
+    .callout(
         @inventive-teal-lightest,
         @text-color,
         @callout-border: @inventive-teal-light
-    ); 
+    );
     .callout--border--left;
     .callout--icon("Adviser only content");
     &:before {
