--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -10,23 +10,23 @@
 .dap-panel .dap-panel--base,
 .highlight {
 	// Unstyled
-	.callout( 
-		@blue-lighter, 
-		@blue 
-	); 
-	.callout--border; 
+	.callout(
+		@blue-lighter,
+		@blue
+	);
+	.callout--border;
 	.callout--border--left;
 }
 
 // Green
 .callout--confirmation {
-	.callout( 
-		@green-lighter, 
+	.callout(
+		@green-lighter,
 		@green
 	);
 	.callout--border--left;
     &.callout--icon {
-        .callout--icon("\f00c\00a0 Correct");
+        .callout--icon("\2713\00a0 Correct");
     }
 }
 
@@ -34,11 +34,11 @@
 .callout--warning,
 .dap-panel--crucial,
 .highlight--error {
-	.callout( 
+	.callout(
 		@red-lightest,
 		@text-color,
         @callout-border: @red
-	); 
+	);
 	.callout--border--left;
     .callout--icon("\f071\00a0 Important");
     &:before {
@@ -50,9 +50,9 @@
 .callout--alert,
 .dap-panel--important,
 .highlight--warning {
-	.callout( 
+	.callout(
 		@yellow-light
-	); 
+	);
 	.callout--border--left;
     &.callout--icon {
         .callout--icon("\f06a\00a0 Worth\00a0knowing");
@@ -65,53 +65,53 @@
 // Gray
 .callout--quote,
 .dap-panel--example {
-	.callout( 
-		@white, 
+	.callout(
+		@white,
 		@gray-2
-	); 
-	.callout--border; 
-	.callout--border--left; 
+	);
+	.callout--border;
+	.callout--border--left;
 }
 
 // White
 .callout--white {
-.callout( 
+.callout(
     @white,
-    @white 
-); 
+    @white
+);
 }
 
 // Brand - Heritage
 .callout--heritage	{
-	.callout( 
-		@heritage-yellow, 
-		@heritage-blue, 
-		@heritage-blue 
-	); 
+	.callout(
+		@heritage-yellow,
+		@heritage-blue,
+		@heritage-blue
+	);
 }
 
 // Brand - Responsible
-.callout--responsible { 
-	.callout( 
-		@responsible-aqua, 
-		@responsible-purple, 
-		@responsible-purple 
-	); 
+.callout--responsible {
+	.callout(
+		@responsible-aqua,
+		@responsible-purple,
+		@responsible-purple
+	);
 }
 
 // Brand - Inventive
-.callout--inventive { 
-	.callout( 
-		@inventive-pink, 
-		@inventive-teal 
+.callout--inventive {
+	.callout(
+		@inventive-pink,
+		@inventive-teal
 	);
 }
 
 // Brand - Generous
-.callout--generous	{ 
-	.callout( 
-		@generous-mauve, 
-		@generous-green 
+.callout--generous	{
+	.callout(
+		@generous-mauve,
+		@generous-green
 	);
 }
 
@@ -125,9 +125,9 @@
 }
 
 .box--warning {
-    .callout( 
-        @yellow-light 
-    ); 
+    .callout(
+        @yellow-light
+    );
     .callout--border--left;
 }
 
@@ -142,7 +142,7 @@
 .well--outline {
     .callout (
         @white,
-        @callout-border: @heritage-blue        
+        @callout-border: @heritage-blue
     );
     .callout--border;
     border-radius: @form-border-radius;
@@ -169,7 +169,7 @@
         font-size: @font-size-base;
         color: @text-color;
     }
-    
+
     .p {
         font-size: @font-size-base;
         color: @text-color;
@@ -190,7 +190,7 @@
         font-size: @font-size-base;
         color: @text-color;
     }
-    
+
     .p {
         font-size: @font-size-base;
         color: @text-color;
@@ -211,7 +211,7 @@
         font-size: @font-size-base;
         color: @text-color;
     }
-    
+
     .p {
         font-size: @font-size-base;
         color: @text-color;
