--- a/libs/modules/navigation.less
+++ b/libs/modules/navigation.less
@@ -30,7 +30,7 @@
 		font-weight: 700;
 		&:after {
 			box-sizing: border-box;
-		    font-family: 'FontAwesome';
+		    font-family: 'cab-icons';
 			content: "\f067";
 		    padding: 0 @box-spacing-horizontal*1.25;
 		    height: 100%;
