--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -9,7 +9,7 @@ html
 		meta(name="keywords")
 		meta(name="description")
 
-		title Citizens Advice style guide 
+		title Citizens Advice style guide
 			- if (typeof title !== "undefined")
 				| - #{title}
 
@@ -21,8 +21,7 @@ html
 		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
 
 		// Stylesheets
-		link(href="css/prism.css", rel="stylesheet")
-		link(href="css/site.css", rel="stylesheet")
+		link(href="css/guide.css", rel="stylesheet")
 		link(href="images/favicon/32.png", rel="shortcut icon")
 		link(href="images/favicon/228.png", rel="apple-touch-icon")
 
@@ -83,7 +82,7 @@ html
 							button.main-header__search__submit(title="Search", type="submit")
 								i.icon-search.icon--no-text
 								span.screenreader Search
-								
+
 			nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
 				ul.nav-list-primary
 					li.top-item.js-mega-menu(style="display: list-item;")
@@ -270,7 +269,7 @@ html
 
 					.main-footer__box.main-footer__box--copyright
 						div
-							p 
+							p
 								img(alt="", height="100", src="images/ca-logo_100px.svg", width="100")
 								| Copyright © 2015 Citizens Advice. All rights reserved.
 								br
@@ -293,7 +292,7 @@ html
 							| VAT number 726 0202 76 Company limited by guarantee. Registered number 1436945 England
 							br
 							| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
-								
+
 		<!--[if IE 8]></div><![endif]-->
 		script(src="js/advisor.js")
 		script(src="js/core.js")
