--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -5,11 +5,11 @@
 
 @font-face {
     font-family: 'cab-icons';
-    src:url('fonts/cab-icons.eot?fzb66m');
-    src:url('fonts/cab-icons.eot?fzb66m#iefix') format('embedded-opentype'),
-        url('fonts/cab-icons.ttf?fzb66m') format('truetype'),
-        url('fonts/cab-icons.woff?fzb66m') format('woff'),
-        url('fonts/cab-icons.svg?fzb66m#cab-icons') format('svg');
+    src:url('assets/fonts/cab-icons.eot?fzb66m');
+    src:url('assets/fonts/cab-icons.eot?fzb66m#iefix') format('embedded-opentype'),
+        url('assets/fonts/cab-icons.ttf?fzb66m') format('truetype'),
+        url('assets/fonts/cab-icons.woff?fzb66m') format('woff'),
+        url('assets/fonts/cab-icons.svg?fzb66m#cab-icons') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -235,6 +235,11 @@
     }
 }
 
+// Depreciated styles, need to be fixed
+.icon-search:before {
+    content: @i-search;
+    &:extend(.icon);
+}
 
 /*
 
