--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -30,24 +30,15 @@
 		border-bottom-color: @callout-border;
 	}
     > *:first-child {
-    	padding-top: 0;
-    }
-    h1:first-child,
-    h2:first-child,
-    h3:first-child,
-    h4:first-child,
-    h5:first-child,
-    h6:first-child {
     	margin-top: 0;
-    	padding-top: 0;
-    }
-    li:first-child {
     	padding-top: 0;
     }
     > *:last-child {
     	margin-bottom: 0;
+    	padding-bottom: 0;
     }
-	/*.callout__link {
+	/* This was removed due to lack of use
+	.callout__link {
 	 	cursor: pointer;
 	 	display: block;
 	    padding: @box-spacing-vertical @box-spacing-horizontal*4.5 @box-spacing-vertical @box-spacing-horizontal;
