--- a/libs/jade/typography.jade
+++ b/libs/jade/typography.jade
@@ -7,7 +7,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Styles", href: "index.html#styles"}, 
+		{title: "Styles", href: "index.html#styles"},
 		{title: "Typography"}])
 
 block sidebar
@@ -18,24 +18,24 @@ block content
 		div
 			p The font used is #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.
 			p When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.
-			p(style="font-weight: 400;") Open Sans 400 
+			p(style="font-weight: 400;") Open Sans 400
 				span.code @font-weight-base
-			p(style="font-weight: 600;") Open Sans 600 
+			p(style="font-weight: 600;") Open Sans 600
 				span.code @font-weight-bold
-			p(style="font-weight: 700;") Open Sans 700 
+			p(style="font-weight: 700;") Open Sans 700
 				span.code @font-weight-bolder
-			p(style="font-weight: 800;") Open Sans 800 
+			p(style="font-weight: 800;") Open Sans 800
 				span.code @font-weight-boldest
 			p Typographic styles for content specific pages. See #[a(href="#") content guidelines] for how to write content.
-			h1 h1 for page titles 
+			h1 h1 for page titles
 				span.code @font-size-h1
-			h2 h2 sub header, for section titles 
+			h2 h2 sub header, for section titles
 				span.code @font-size-h2
-			h3 h3 for headings within sections 
+			h3 h3 for headings within sections
 				span.code @font-size-h3
-			h4 h4 
+			h4 h4
 				span.code @font-size-h4
-			h5 h5 
+			h5 h5
 				span.code @font-size-h5
 			p.u-lede This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 				span.code @u-lede
@@ -49,19 +49,21 @@ block content
 				ul
 					li This is a standard text #[a(href="#") with a link] and an external.
 					li This is a standard text #[a.a-external-link(href="#") with an external link].
+					li This is a standard text #[a.a-file-doc(href="#") with a link to an unspecified file].
 					li This is a standard text #[a.a-pdf-doc(href="#") with a link to a pdf document].
-					li This is a standard text #[a.a-file-doc(href="#") with a link to a html or text file].
 					li This is a standard text #[a.a-word-doc(href="#") with a link to a word document].
-					li This is a standard text #[a.a-excel-doc(href="#") with a link to a excel document].
+					li This is a standard text #[a.a-excel-doc(href="#") with a link to an excel document].
+					li This is a standard text #[a.a-code-doc(href="#") with a link to a code document].
 			pre
 				code.language-html
 					| &lt;ul&gt;
 					| 	&lt;li&gt;This is a standard text &lt;a href="#"&gt;with a link&lt;/a&gt; and an external.&lt;/li&gt;
 					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-external-link"&gt;with an external link&lt;/a&gt;.&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-file-doc"&gt;with a link to an unspecified file&lt;/a&gt;.&lt;/li&gt;
 					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-pdf-doc"&gt;with a link to a pdf document&lt;/a&gt;.&lt;/li&gt;
-					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-file-doc"&gt;with a link to a html or text file&lt;/a&gt;.&lt;/li&gt;
 					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-word-doc"&gt;with a link to a word document&lt;/a&gt;.&lt;/li&gt;
-					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-excel-doc"&gt;with a link to a excel document&lt;/a&gt;.&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-excel-doc"&gt;with a link to an excel document&lt;/a&gt;.&lt;/li&gt;
+					| 	&lt;li&gt;This is a standard text &lt;a href="#" class="a-code-doc"&gt;with a link to a code document&lt;/a&gt;.&lt;/li&gt;
 					| &lt;/ul&gt;
 
 			h3 Standard unordered list
