Fixed error in example

--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -35,6 +35,8 @@
     }
     > *:last-child {
     	margin-bottom: 0;
+    }
+    > p:last-child {
     	padding-bottom: 0;
     }
 	/* This was removed due to lack of use
